[package]
name = "grep_lu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = { version = "0.12.1" }
# enum_dispatch = "0.3.13"
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
strip = true
